# fastproto

./: .gitignore  Gemfile  README.md  Rakefile
benchmark/: benchmark_st.rb  prof.rb
benchmark/protobufs/: benchmark.proto
compiler/: CMakeLists.txt  Makefile
compiler/runtime/: Rakefile  extconf.rb  rb_fastproto_init.cpp  rb_fastproto_init.h  rb_fastproto_init_thunks.h.erb
compiler/src/: protoc_gen_rb_fastproto.cpp  rb_fastproto_code_generator.cpp  rb_fastproto_code_generator.h  rb_fastproto_code_generator_entrypoint.cpp  rb_fastproto_code_generator_enum.cpp  rb_fastproto_code_generator_message.cpp  rb_fastproto_code_generator_method.cpp  rb_fastproto_code_generator_names.cpp  rb_fastproto_code_generator_service.cpp  rb_fastproto_code_generator_utils.cpp
spec/: Makefile  gen_spec.rb  message_spec.rb  service_spec.rb  spec_helper.rb
spec/protobufs/: featureful.proto  import_protobuf_internals.proto  include_child.proto  include_parent.proto  nested_tests.proto  services.proto  simple.proto  test_proto_1.proto
spec/protobufs/dir1/: file.proto
spec/protobufs/dir2/: file.proto
